version 0.6 payments, orders history, products, databases changed